# message-ix-models

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  CITATION.cff  MANIFEST.in  README.md  README.rst  build_nexus_subannual.py  check_historical_data.py  check_ref_activity_years.py  check_reporter_key_persistence.py  conftest.py  cost_projections.py  find_reporter_keys.py  hydrogen_reporting_docs.md  hyway_SSP_SSP2_v6.2_baseline_1000f_h2_ct_h2_emissions_h2_report.xlsx  pyproject.toml  run_h2_reporting_example.py  setup.cfg  tatus  test_emissions_report.py
.github/: CODEOWNERS  codecov.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: project-paper-doc.yml  project_paper.yml
.github/workflows/: lint.yaml  publish.yaml  pytest-snapshots.yaml  pytest.yaml  transport.yaml
doc/: Makefile  api.rst  bibliography.rst  cli.rst  conf.py  data.rst  develop.rst  distrib.rst  index.rst  install.rst  main.bib  migrate.rst  quickstart.rst  releasing.rst  repro.rst  requirements.in  requirements.txt  whatsnew.rst
doc/_static/: custom.css  message-globiom.bib  message-globiom.ris
doc/_static/css/: custom.css
doc/_static/png_source_files/: Land-use_emulator_RES.pptx  Land-use_emulator_figures.ipynb
doc/_template/: autosummary-class.rst  autosummary-module.rst
doc/api/: data-sources.rst  disutility.rst  model-bare.rst  model-bmt.rst  model-build.rst  model-emissions.rst  model-snapshot.rst  model-workflow.rst  model.rst  project.rst  r.rst  testing.rst  tests.rst  tools-bilateralize.rst  tools-costs.rst  tools-impacts.rst  tools-messagev.rst  tools.rst  util.rst  workflow.rst
doc/api/report/: default-config.rst  index.rst  legacy.rst
doc/bmt/: index.rst
doc/buildings/: index.rst
doc/dev/: 275.rst
doc/distrib/: overview.rst  unicc.rst
doc/global/: .gitignore  Makefile  README.rst  circle.yml  conf.py  ext_setup.sh  ext_teardown.sh  external_index.rst  further-reading.rst  glossary.rst  index.rst  macro.rst  make.bat  requirements.txt  z_bibliography.rst
doc/global/_extra/: climate_indicators.rst  f_gases.rst  imports_and_exports.rst  index.rst
doc/global/annex/: index.rst
doc/global/bibs/: main.bib  messageix-globiom.ris
doc/global/climate/: index.rst
doc/global/emissions/: index.rst
doc/global/energy/: demand.rst  fuel_blending.rst  index.rst  policy.rst  tech.rst  tech_addon.rst
doc/global/land_use/: crop.rst  emulator.rst  forest.rst  index.rst  land.rst  spatial.rst
doc/global/overview/: index.rst  spatial.rst  temporal.rst
doc/global/socio_econ/: beh_change.rst  index.rst  narratives.rst  pop_GDP.rst
doc/global/source/: bibliography.rst  conf.py  econ.rst  external_index.rst  extra.rst  glossary.rst  iam_framework.rst  iiasa_IAM_framework.rst  index.rst  macro.rst  message-globiom_1.0.rst  message.rst  message_DB_new_features.rst  message_GAMS_new_features.rst  message_new_features.rst  z_bibliography.rst
doc/global/water/: climate_impacts.rst  cooling.rst  demand.rst  index.rst  supply.rst
doc/howto/: bootstrap.rst  doc-project.rst  index.rst  migrate.rst  path.rst  pull-request.rst  quickstart.rst  release.rst  report.rst  slurm.rst  unicc.rst
doc/hydro/: index.rst
doc/material/: data.rst  files.rst  index.rst  v1.1.0.rst  v1.2.0.rst  v1.2.1.rst  whatsnew.rst
doc/model/: magpie.rst
doc/model/buildings/: index.rst
doc/pkg-data/: codelists.rst  iiasa-se.rst  node.rst  relation.rst  year.rst
doc/project/: GDP_climate_shocks.rst  advance.rst  alps.rst  carbon-direct.rst  cfr.rst  circeular.rst  digsy.rst  ecemf.rst  edits.rst  efc.rst  elevate.rst  engage.rst  gdpimpacts.rst  gea.rst  geidco.rst  genie.rst  guide.rst  hyway.rst  justmip.rst  navigate.rst  newpathways-trade.rst  newpathways.rst  nextgen-carbon.rst  ngfs.rst  prisma.rst  scenariomip.rst  shape.rst  sparccle.rst  spipa.rst  ssp.rst  uptake.rst
doc/transport/: data.rst  disutility.rst  files.rst  index.rst  input.rst  old.rst  output.rst  report.rst  ssp.rst
doc/water/: files.rst  index.rst
message_ix_models/: __init__.py  cli.py  data_steel.xlsx  testing.py  types.py  workflow.py
message_ix_models/data/: commodity.yaml  emission.yaml  level.yaml  technology.yaml  unit.yaml
message_ix_models/data/GDP_climate_shocks/: OECD ENV-Growth 2023_GDP_PPP.csv  SSP2_population.csv  Scenario_Config-shocks.xlsx  burke_damages_message.csv  burke_damages_message2.csv  burke_damages_rcp26_60.csv  config.yaml  config_ENGAGE_runs24.yaml  (+3 more)
message_ix_models/model/: __init__.py  bare.py  build.py  cli.py  config.py  cplex.op2  cplex.opt  data.py  disutility.py  emissions.py  macro.py  magpie.py  snapshot.py  structure.py  workflow.py
message_ix_models/project/: transport_futures.py
message_ix_models/report/: __init__.py  cli.py  compat.py  computations.py  config.py  core.py  doc.rst  extraction.py  gdp.py  hist_flag.py  key.py  operator.py  plot.py  price.py  sim.py  util.py
message_ix_models/testing/: __init__.py  check.py  cli.py
message_ix_models/tests/: __init__.py  test_cli.py  test_import.py  test_report.py  test_testing.py  test_tools.py  test_util.py  test_workflow.py
message_ix_models/tools/: add_AFOLU_CO2_accounting.py  add_CO2_emission_constraint.py  add_FFI_CO2_accounting.py  add_alternative_TCE_accounting.py  add_budget.py  add_dac.py  add_emission_trajectory.py  add_tax_emission.py  advance.py  bgs.py  cagr.py  calibrate_UE_gr_to_demand.py  calibrate_UE_share_constraints.py  cepii.py  exo_data.py  genisim.py  get_optimization_years.py  gfei.py  iai.py  iamc.py  iea_web.py  intpol.py  messagev.py  policy.py  remove_emission_bounds.py  res_marg.py  update_h2_blending.py  wb.py
message_ix_models/util/: __init__.py  _convert_units.py  _dataclasses.py  _logging.py  _message_ix.py  cache.py  citation_wrapper.py  click.py  common.py  config.py  context.py  genno.py  graphviz.py  importlib.py  ixmp.py  logging.py  message_ix.py  migrate.py  node.py  pooch.py  pycountry.py  pytest.py  r.py  scenarioinfo.py  sdmx.py  slurm.py  zipfile.py
util/: 1-prep.sh  2-migrate.sh  reset.sh  settings.sh
(+3554 files in other folders)
