[tool.poetry]
name = "message-ix-models"
version = "0.0.0"
description = "Tools for the MESSAGEix-GLOBIOM family of models"
authors = ["IIASA Energy, Climate, and Environment (ECE) Program"]
maintainers = [
    "Paul Natsuo Kishimoto <mail@paul.kishimoto.name>",
    "Fridolin Glatter <glatter@iiasa.ac.at>",
]
license = "Apache License 2.0"
readme = "README.rst"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: R",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Information Analysis",
]
homepage = "https://github.com/iiasa/message-ix-models"
repository = "https://github.com/iiasa/message-ix-models"
documentation = "https://docs.messageix.org/models"

[tool.poetry.dependencies]
python = ">=3.8, <3.12"
click = "^8.1.7"
colorama = "^0.4.6"
genno = "^1.19.0"
iam_units = "^2023.9.12"
message_ix = "^3.4.0"
pooch = "^1.7.0"
pyam-iamc = "^1.9.0" #2.0.0 req python >=3.10
pyarrow = "^13.0.0"
pycountry = "^22.3.5"
PyYAML = "^6.0.1"
sdmx1 = "^2.12.0"
tqdm = "^4.66.1"

ixmp = {extras = ["tests"], version = "^3.7.0"}
plotnine = {version = "^0.12.2", optional = true}
pytest = {version = "^7.4.0", optional = true}
pytest-cov = {version = "^4.1.0", optional = true}
pytest-xdist = {version = "^3.3.1", optional = true}
sphinx = {version = "^6.2.1", optional = true}
sphinx-rtd-theme = {version = "^1.2.2", optional = true}
sphinxcontrib-bibtex = {version = "^2.5.0", optional = true}

[tool.poetry.extras]
docs = ["sphinx", "sphinx-rtd-theme", "sphinxcontrib-bibtex", "tests"]
report = ["plotnine"]
tests = ["ixmp", "pytest", "pytest-cov", "pytest-xdist", "report"]

[tool.poetry.scripts]
mix-models = "message_ix_models.cli:main"

[tool.poetry-dynamic-versioning]
bump = true
enable = true
style = "pep440"
vcs = "git"

[tool.coverage.report]
exclude_also = [
  # Don't complain about abstract methods, they aren't run
  "@(abc\\.)?abstractmethod",
  # Imports only used by type checkers
  "if TYPE_CHECKING:",
  # Requires message_data
  "if HAS_MESSAGE_DATA:",
]

[tool.mypy]
exclude = ["doc/"]

[[tool.mypy.overrides]]
# Packages/modules for which no type hints are available
module = [
  "colorama",
  "message_data.*",
  "plotnine",
  "pooch",
  "pycountry",
  # Indirectly via message_ix
  # This should be a subset of the list in message_ix's pyproject.toml
  "matplotlib.*",
  "pandas.*",
  "pyam",
  # Indirectly via ixmp
  # This should be a subset of the list in ixmp's pyproject.toml
  "dask.*",
  "jpype",
  "memory_profiler",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# Work around iiasa/ixmp#465 and similar
module = ["ixmp.*"]
no_implicit_optional = false

[tool.pytest.ini_options]
# Disable faulthandler plugin on Windows to prevent spurious console noise
addopts = "-p no:faulthandler --cov=message_ix_models --cov-report="
filterwarnings = "ignore:distutils Version classes.*:DeprecationWarning"

[tool.ruff]
select = ["C9", "E", "F", "I", "W"]

[tool.ruff.mccabe]
max-complexity = 13

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
