[metadata]
name = message-ix-models
author = IIASA Energy, Climate, and Environment (ECE) Program
author_email = message_ix@iiasa.ac.at
license = Apache 2.0
description = Tools for the MESSAGEix-GLOBIOM family of models
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/iiasa/message-ix-models

[options]
packages = message_ix_models
python_requires = >=3.7
include_package_data = True
zip_safe = True
install_requires =
    click
    iam_units
    message_ix >= 3.2.0
    pycountry
    PyYAML
    sdmx1 >= 2.2.0
    setuptools >= 41

[options.extras_require]
docs =
    sphinx >= 3.4.3
    sphinx_rtd_theme
tests =
    %(docs)s
    pytest
    pytest-cov

[options.entry_points]
console_scripts =
    mix-models = message_ix_models.cli:main

[isort]
profile = black

[flake8]
max-line-length = 88

[mypy]
# Empty section required as of mypy 0.800;
# see https://github.com/python/mypy/issues/9940

[mypy-dask.*]
ignore_missing_imports = True

# TEMPORARY: this can be removed once iam-units includes py.typed
[mypy-iam_units.*]
ignore_missing_imports = True

[mypy-jpype.*]
ignore_missing_imports = True
[mypy-matplotlib.*]
ignore_missing_imports = True
[mypy-message_data.*]
ignore_missing_imports = True
[mypy-pandas.*]
ignore_missing_imports = True
[mypy-pint.*]
ignore_missing_imports = True
[mypy-pycountry]
ignore_missing_imports = True
[mypy-setuptools]
ignore_missing_imports = True
