[metadata]
name = message-ix-models
author = IIASA Energy, Climate, and Environment (ECE) Program
author_email = message_ix@iiasa.ac.at
license = Apache 2.0
description = Tools for the MESSAGEix-GLOBIOM family of models
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/iiasa/message-ix-models

[options]
packages = message_ix_models
python_requires = >=3.7
include_package_data = True
zip_safe = True
install_requires =
    click
    colorama
    # When the minimum is greater than the minimum in the latest ixmp
    genno >= 1.8.0
    iam_units
    message_ix >= 3.2.0
    pyam-iamc >= 0.6
    pycountry
    PyYAML
    sdmx1 >= 2.2.0
    setuptools >= 41

[options.extras_require]
docs =
    # Temporary: should be covered via message_ix[report]
    genno[compat]
    sphinx >= 3.4.3
    sphinx_rtd_theme
r =
    rpy2
tests =
    %(docs)s
    %(r)s
    pytest
    pytest-cov

[options.entry_points]
console_scripts =
    mix-models = message_ix_models.cli:main

[tool:pytest]
# Disable faulthandler plugin on Windows to prevent spurious console noise
addopts = -p no:faulthandler

[isort]
profile = black

[flake8]
max-line-length = 88

[mypy]
# Empty section required as of mypy 0.800;
# see https://github.com/python/mypy/issues/9940

[mypy-dask.*]
ignore_missing_imports = True
[mypy-colorama.*]
ignore_missing_imports = True
[mypy-jpype.*]
ignore_missing_imports = True
[mypy-matplotlib.*]
ignore_missing_imports = True
[mypy-message_data.*]
ignore_missing_imports = True
[mypy-pandas.*]
ignore_missing_imports = True
[mypy-pint.*]
ignore_missing_imports = True
[mypy-pycountry]
ignore_missing_imports = True
[mypy-rpy2.*]
ignore_missing_imports = True
[mypy-setuptools]
ignore_missing_imports = True

# For ixmp.testing
[mypy-nbclient.*]
ignore_missing_imports = True
[mypy-nbformat.*]
ignore_missing_imports = True
[mypy-memory_profiler.*]
ignore_missing_imports = True
