[metadata]
name = message-ix-models
author = IIASA Energy, Climate, and Environment (ECE) Program
author_email = message_ix@iiasa.ac.at
license = Apache 2.0
description = Tools for the MESSAGEix-GLOBIOM family of models
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/iiasa/message-ix-models

[options]
packages = message_ix_models
python_requires = >=3.7
include_package_data = True
zip_safe = True
install_requires =
    click
    colorama
    # When the minimum is greater than the minimum via message_ix; e.g.
    # message_ix >= 3.4.0 → ixmp >= 3.4.0 → genno >= 1.6.0
    genno >= 1.8.0
    iam_units
    message_ix >= 3.4.0
    pyam-iamc >= 0.6
    pycountry
    PyYAML
    sdmx1 >= 2.8.0
    setuptools >= 41

[options.extras_require]
tests =
    # For nbclient, thus nbformat
    ixmp[tests]
    pytest
    pytest-cov
docs =
    # sphinx.ext.autosummary covers the test suite, so all test requirements
    %(tests)s
    # Temporary: should be covered via message_ix[report]
    genno[compat]
    sphinx >= 4
    sphinx_rtd_theme
    sphinxcontrib-bibtex

[options.entry_points]
console_scripts =
    mix-models = message_ix_models.cli:main

[flake8]
max-complexity = 15
max-line-length = 88
ignore =
    # See https://black.readthedocs.io/en/stable/faq.html
    E203
    W503
enable-extensions = W504
